For the current development, see: https://github.com/dmpe/WufooR

###
March 2019     - ensure that package works properly again
               - bump version number and update dependancies, add new methods to cover most of the API
               - fix spelling mistakes, update documentation

March 2018     - update to reflect CRAN messages
               - updated tutorial page and deleted api key which caused problems
               - upgraded some packages

September 2017 - attempted to fix the user bug

April 2017     - New update to reflect dplyr package release.
               - Libraries have been upgraded and error with names 
               of fields/titles has been fixed (see Hadley's email)

March 2016     - Thanks to Maksim, new 'pageStart' and 'pageSize' parameters
                 in 'form_entries' have been added https://github.com/dmpe/WufooR/pull/4

February 2016  - Update packages
               - Make documentation more explicit about what is expected
               - Add 2 new parametrs: domain and debugConnection

September 2015 - bring up to date with R releases
               - attempt to fix Fedora's issue with security certs (NSS non existent; see CRAN mail)

July 2015      - Initial CRAN Release.
               - Fully working release.
          