@@ -13,6 +13,7 @@ export(report_entries)
 export(report_entriesCount)
 export(report_fields)
 export(report_info)
+export(report_widgets)
 export(reports_info)
 export(user_info)
 import(dplyr)
