@@ -2,7 +2,9 @@ For the current development, see: https://github.com/dmpe/WufooR
 
 ###
 March 2019     - ensure that package works properly again
-               - bump version number and update dependancies, add new methods to cover most of the API
+               - bump version number and update dependancies
+               - add new methods to cover most of the API (other than POST requests, 
+                 with an exception LOGIN POST)
                - fix spelling mistakes, update documentation
 
 March 2018     - update to reflect CRAN messages
@@ -13,7 +15,7 @@ September 2017 - attempted to fix the user bug
 
 April 2017     - New update to reflect dplyr package release.
                - Libraries have been upgraded and error with names 
-               of fields/titles has been fixed (see Hadley's email)
+                 of fields/titles has been fixed (see Hadley's email)
 
 March 2016     - Thanks to Maksim, new 'pageStart' and 'pageSize' parameters
                  in 'form_entries' have been added https://github.com/dmpe/WufooR/pull/4
